--- a/templates/base.html
+++ b/templates/base.html
@@ -62,18 +62,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'profiles' %}">Profile</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'products' %}">Products <span class="sr-only">(current)</span></a>
-                </li>
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="products" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Products
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <button class="dropdown-item" type="button">Action</button>
-                        <button class="dropdown-item" type="button">Another action</button>
-                        <button class="dropdown-item" type="button">Something else here</button>
+                    <div class="dropdown-menu" aria-labelledby="products">
+                        <button class="dropdown-item" type="button"><a class="nav-link" href="{% url 'products' %}">All
+                                Products <span class="sr-only">(current)</span></a></button>
+                        <button class="dropdown-item" type="button">Hats and Scarfs</button>
+                        <button class="dropdown-item" type="button">Jewlery</button>
+                        <button class="dropdown-item" type="button">Tailoring</button>
+                        <button class="dropdown-item" type="button">Little Humans</button>
                     </div>
                 </div>
                 {% if user.is_authenticated %}
@@ -93,6 +93,9 @@
         </div>
     </nav>
     {% block content %}
+    {% endblock %}
+
+    {% block postloadjs %}
     {% endblock %}
 </body>
 
