--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
     {% endblock %}
 
     {% block extra_js %}
@@ -81,10 +80,9 @@
                     <a class="nav-link" href="{% url 'account_logout' %}">Logout <span class="
                                         sr-only">(current)</span></a>
                 </li>
-
                 {% else %}
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'account_logout' %}">Login <span class="
+                    <a class="nav-link" href="{% url 'account_login' %}">Login <span class="
                                                                         sr-only">(current)</span></a>
                 </li>
                 {% endif %}
