created product component

--- a/bag/templates/unicorn/bagstatus.html
+++ b/bag/templates/unicorn/bagstatus.html
@@ -10,6 +10,7 @@
                     $0.00
                     {% endif %}
                 </p>
+                <button u:click="add_to_bag(1)">Add to bag</button>
             </div>
         </a>
     </li>
