--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load unicorn %}
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -20,13 +20,9 @@
         </div>
     </div>
     <div class="row h-100">
-        <div class="col-7 col-md-6 my-auto">
-            <img class='rotating-immages' src="{{ product.image_url }}" alt="immage of the product"
-                style=" height: 400px">
-            <p>{{ product.name }}</p>
-            <p>{{ product.description }}</p>
-            <p>EUR {{ product.price }}</p>
-        </div>
+        {% block unicorn_product %}
+        {% unicorn 'product' %}
+        {% endblock %}
     </div>
 </div>
 {% endblock %}
