experimented with child-parent relationship between django-unicorn components bag and product

--- a/bag/templates/unicorn/bagstatus.html
+++ b/bag/templates/unicorn/bagstatus.html
@@ -1,6 +1,6 @@
 <div>
     <li class="list-inline-item">
-        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
             <div class="text-center">
                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                 <p class="my-0">
@@ -10,7 +10,7 @@
                     $0.00
                     {% endif %}
                 </p>
-                <button u:click="add_to_bag(1)">Add to bag</button>
+                <button u:click="add_to_bag(1)">View Bag</button>
             </div>
         </a>
     </li>
