--- a/templates/base.html
+++ b/templates/base.html
@@ -91,8 +91,8 @@
                 </li>
                 {% endif %}
             </ul>
-            {% block unicorn_bag_status %}
-            {% unicorn 'bagstatus' %}
+            {% block unicorn_bagstatus %}
+            {% unicorn 'bagstatus'%}
             {% endblock %}
         </div>
     </nav>
