--- a/bag/templates/unicorn/bagstatus.html
+++ b/bag/templates/unicorn/bagstatus.html
@@ -10,7 +10,7 @@
                     $0.00
                     {% endif %}
                 </p>
-                <button u:click="add_to_bag(1)">View Bag</button>
+                <a href="{% url 'bag' %}" class="btn btn-secondary">View Bag</a>
             </div>
         </a>
     </li>
