--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% load unicorn %}
+{% csrf_token %}
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -19,15 +20,8 @@
             </h1>
         </div>
     </div>
-    <div class="row h-100">
-        {% block unicorn_product %}
-        {% unicorn 'product'%}
-        {% endblock %}
-    </div>
+    {% unicorn 'product' %}
+
 </div>
-{% block postloadjs %}
-{{ block.super }}
-<script type="text/javascript" src="{% static 'products/js/rotate_products.js' %}"></script>
-{% endblock %}
 
 {% endblock %}
