--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,6 @@
 
     {% block extra_js %}
     {% unicorn_scripts %}
-
     {% endblock %}
 </head>
 
@@ -98,8 +97,9 @@
     </nav>
     {% block content %}
     {% endblock %}
-
     {% block postloadjs %}
+    <script type="text/javascript" src="{% static 'bag/js/bag_callers.js' %}"></script>
+<!--    <script type="text/javascript" src="{% static 'products/js/rotate_products.js' %}"></script>-->
     {% endblock %}
 </body>
 
