--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -20,8 +20,11 @@
             </h1>
         </div>
     </div>
-    {% unicorn 'product' %}
-
+    <div  class="row g-0 h-100">
+        {% for product in products %}
+        {% unicorn 'product' with product=product %}
+        {% endfor %}
+    </div>
 </div>
 
 {% endblock %}
