--- a/products/templates/unicorn/product.html
+++ b/products/templates/unicorn/product.html
@@ -1,20 +1,63 @@
-<div  class="row h-100">
-    {% for product in products %}
-    <div class="col-3 col-md-6 my-auto">
-        <img class="rotating-immages" src="{{ product.image_url }}" alt="immage of the product" style="height: 400px" />
-        <p>{{ product.name }}</p>
-        <p>{{ product.description }}</p>
-        <p>EUR {{ product.price }}</p>
-
-        <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" u:click="add_to_bag({{product.id}})"> Add to bag </button>
-        <p>{{product.id}}</p>
-        <button id="remove-from-bag-btn-{{ product.id }}" class="remove-from-bag-btn" u:click="remove_from_bag({{ product.id }})"
-        {% if product.id in comp_bag_keys %} style = "visibility: visible;" {%else%} style = "visibility:hidden;" {%endif%}>
-            Remove item
-        </button>
-        {{ comp_bag_keys }}
-
-    </div>
-    {% endfor %}
+<div class="col-3 col-md-6">
+    <img class="rotating-immages" src="{{ product.image_url }}" alt="immage of the product" style="height: 400px" />
+    <p>{{ product.name }}</p>
+    <p>{{ product.description }}</p>
+    <p>EUR {{ product.price }}</p>
+    <form >
+        <div class="form-group w-50">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <button class="decrement-qty btn btn-black rounded-0"
+                        data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                        <span class="icon">
+                            <i class="fas fa-minus"></i>
+                        </span>
+                    </button>
+                </div>
+                <input class="form-control qty_input" type="number"
+                    name="quantity" value="1" min="1" max="99"
+                    data-item_id="{{ product.id }}"
+                    id="id_qty_{{ product.id }}">
+                <div class="input-group-append">
+                    <button class="increment-qty btn btn-black rounded-0"
+                        data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                        <span class="icon">
+                            <i class="fas fa-plus"></i>
+                        </span>
+                    </button>
+                </div>
+            </div>
+            <div class="input-group">
+                <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" u:click.prevent="add_to_bag({{product.id}})"> Add to bag </button>
+            </div>
+            <div class="input-group">
+                <button id="remove-from-bag-btn-{{ product.id }}" class="remove-from-bag-btn" u:click.prevent="remove_from_bag({{ product.id }})"
+                {% if product.id in comp_bag_keys %} style = "visibility: visible;" {%else%} style = "visibility:hidden;" {%endif%}>
+                    Remove item
+                </button>
+            </div>
+            <div class="input-group">
+                {% if sellected == 'red' %}
+                <p> red </p>
+                {% endif %}
+                <button style="width:30px; height:30px; background-color:red; border-radius: 50%" u:click.prevent="sellect_color('red')"></button>
+                <button style="width:30px; height:30px; background-color:green; border-radius: 50%"></button>
+                <button style="width:30px; height:30px; background-color:blue; border-radius: 50%"></button>
+            </div>
+            <div class="input-group">
+                {% if product.size == 'baby' %}
+                    <p>months: </p>
+                    <button style="width:30px; height:30px; border-radius: 50%">2</button>
+                    <button style="width:30px; height:30px; border-radius: 50%">3</button>
+                    <button style="width:30px; height:30px; border-radius: 50%">6</button>
+                {% elif product.size == 'standard' %}
+                    <button style="width:30px; height:30px; border-radius: 50%">S</button>
+                    <button style="width:30px; height:30px; border-radius: 50%">M</button>
+                    <button style="width:30px; height:30px; border-radius: 50%">L</button>
+                {% endif %}
+            </div>
+        </div>
+    </form>
 </div>
+
 
