--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
     {% endblock %}
 
     {% block extra_css %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     {% endblock %}
 
     {% block corejs %}
@@ -39,6 +40,7 @@
     {% endblock %}
 
     {% block extra_js %}
+
     {% unicorn_scripts %}
     {% endblock %}
 </head>
