--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 {% load unicorn %}
+{% csrf_token %}
+
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -12,15 +14,16 @@
 {% block content %}
 
 <div class="container h-100">
-    <div class="row h-100">
+    <div class="row">
         <div class="col-7 col-md-6 my-auto">
             <h1 class="display-4 logo-font text-black">
                 Bag
             </h1>
         </div>
     </div>
-    <div class="row h-100">
-        {% unicorn 'baglist' %}
-    </div>
+    {% for item in bag_items %}
+        {% unicorn 'item_in_bag' with item=item product=item.product %}
+    {% endfor %}
+
 </div>
 {% endblock %}
