--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     {% for item in bag_items %}
-        {% unicorn 'item_in_bag' with item=item product=item.product %}
+            {% unicorn 'item_in_bag' item=item item_index=forloop.counter0 product=item.product%}
     {% endfor %}
 
 </div>
