--- a/products/templates/unicorn/product.html
+++ b/products/templates/unicorn/product.html
@@ -28,14 +28,14 @@
             <div class="input-group">
                 {% if component_quantity_changed and in_bag %}
                     <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" style="display: none" u:click.prevent="add_to_bag" > Add to bag </button>
-                    <button id="adjust-the-bag-btn-{{ product.id }}" class="adjust-the-bag-btn" style="display:block" u:click.prevent="adjust_bag"> Adjust bag </button>
+                    <button id="adjust-product-bag-btn-{{ product.id }}" class="adjust-product-bag-btn" style="display:block" u:click.prevent="adjust_bag"> Adjust bag </button>
                 {% else %}
                     {% if in_bag %}
                         <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" style="display: block" u:click.prevent="add_to_bag" disabled> Add to bag <i class="fas fa-check-circle"></i></button>
-                        <button id="adjust-the-bag-btn-{{ product.id }}" class="adjust-the-bag-btn" style="display:none" u:click.prevent="adjust_bag"> Adjust bag </button>
+                        <button id="adjust-product-bag-btn-{{ product.id }}" class="adjust-product-bag-btn" style="display:none" u:click.prevent="adjust_bag"> Adjust bag </button>
                     {% else %}
                         <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" style="display: block" u:click.prevent="add_to_bag" > Add to bag </button>
-                        <button id="adjust-the-bag-btn-{{ product.id }}" class="adjust-the-bag-btn" style="display:none" u:click.prevent="adjust_bag"> Adjust bag </button>
+                        <button id="adjust-product-bag-btn-{{ product.id }}" class="adjust-product-bag-btn" style="display:none" u:click.prevent="adjust_bag"> Adjust bag </button>
                     {% endif %}
                 {% endif %}
             </div>
