--- a/products/templates/unicorn/product.html
+++ b/products/templates/unicorn/product.html
@@ -3,61 +3,59 @@
     <p>{{ product.name }}</p>
     <p>{{ product.description }}</p>
     <p>EUR {{ product.price }}</p>
-    <form>
-        <div class="form-group w-50">
-            <div class="input-group">
-                <input class="form-control qty_input" type="number"
-                    name="quantity" value="{{component_quantity}}" min="1" max="99"
-                    data-item_id="{{ product.id }}"
-                    id="id_qty_{{ product.id }}">
-                <div>
-                    <button class="increment-qty btn btn-black rounded-0" u:click.prevent="increment_component_quantity">
-                        <span class="icon">
-                            <i class="fas fa-arrow-up"></i>
-                        </span>
-                    </button>
-                </div>
-                <div>
-                    <button class="decrement-qty btn btn-black rounded-5" u:click.prevent="decrement_component_quantity">
-                        <span class="icon">
-                            <i class="fas fa-arrow-down"></i>
-                        </span>
-                    </button>
-                </div>
-            </div>
-            <div class="input-group">
-                {% if component_quantity_changed and in_bag %}
-                    <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" style="display: none" u:click.prevent="add_to_bag" > Add to bag </button>
-                    <button id="adjust-product-bag-btn-{{ product.id }}" class="adjust-product-bag-btn" style="display:block" u:click.prevent="adjust_bag"> Adjust bag </button>
-                {% else %}
-                    {% if in_bag %}
-                        <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" style="display: block" u:click.prevent="add_to_bag" disabled> Add to bag <i class="fas fa-check-circle"></i></button>
-                        <button id="adjust-product-bag-btn-{{ product.id }}" class="adjust-product-bag-btn" style="display:none" u:click.prevent="adjust_bag"> Adjust bag </button>
-                    {% else %}
-                        <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" style="display: block" u:click.prevent="add_to_bag" > Add to bag </button>
-                        <button id="adjust-product-bag-btn-{{ product.id }}" class="adjust-product-bag-btn" style="display:none" u:click.prevent="adjust_bag"> Adjust bag </button>
-                    {% endif %}
-                {% endif %}
-            </div>
-            <div class="input-group">
-                <button id="remove-from-bag-btn-{{ product.id }}" class="remove-from-bag-btn" u:click.prevent="remove_from_bag"
-                {% if in_bag %} style = "visibility: visible;" {%else%} style = "visibility:hidden;" {%endif%}>
-                    Remove item
+    <div class="form-group w-50">
+        <div class="input-group">
+            <input class="form-control qty_input" type="number"
+                name="quantity" value="{{component_quantity}}" min="1" max="99"
+                data-item_id="{{ product.id }}"
+                id="id_qty_{{ product.id }}">
+            <div>
+                <button class="increment-qty btn btn-black rounded-0" u:click="increment_component_quantity">
+                    <span class="icon">
+                        <i class="fas fa-arrow-up"></i>
+                    </span>
                 </button>
             </div>
-            <div class="input-group">
-                 {% for color_instance in product.colors.all %}
-                    <div id="button-{{color_instance}}-{{product.id}}" style="background-color:{{color_instance.hexcolor}}; border-radius: 50%" u:click.prevent="select_size_or_color('{{color_instance.name_EN}}', 'color')">{{color_instance.name_EN}}</div>
-                {% endfor %}
-            </div>
-            <div class="input-group">
-                {% for size_instance in product.sizes.all %}
-                    <div id="button-{{size_instance}}-{{product.id}}" style="width:40px; height:40px; background-color:lightblue; border-radius: 50%;" u:click.prevent="select_size_or_color('{{size_instance.size}}', 'size')">{{size_instance.size}}</div>
-                {% endfor %}
-                <br>
+            <div>
+                <button class="decrement-qty btn btn-black rounded-5" u:click="decrement_component_quantity">
+                    <span class="icon">
+                        <i class="fas fa-arrow-down"></i>
+                    </span>
+                </button>
             </div>
         </div>
-    </form>
+        <div class="input-group">
+            {% if component_quantity_changed and in_bag %}
+                <button style="display: none" u:click="add_to_bag" onclick="Unicorn.call('bagstatus', 'update')"> Add to bag </button>
+                <button class="adjust-product-bag-btn" style="display:block" u:click="adjust_bag" onclick="Unicorn.call('bagstatus', 'update')"> Adjust bag </button>
+            {% else %}
+                {% if in_bag %}
+                    <button id="add-to-bag-btn-{{ product.id }}" class="add-to-bag-btn" style="display: block" u:click.prevent="add_to_bag" disabled> Add to bag <i class="fas fa-check-circle"></i></button>
+                    <button  class="adjust-product-bag-btn" style="display:none" u:click="adjust_bag" onclick="Unicorn.call('bagstatus', 'update')"> Adjust bag </button>
+                {% else %}
+                    <button style="display: block" u:click="add_to_bag" onclick="Unicorn.call('bagstatus', 'update')"> Add to bag </button>
+                    <button style="display:none" u:click="adjust_bag" onclick="Unicorn.call('bagstatus', 'update')"> Adjust bag </button>
+                {% endif %}
+            {% endif %}
+        </div>
+        <div class="input-group">
+            <button u:click="remove_from_bag" onclick="Unicorn.call('bagstatus', 'update')"
+            {% if in_bag %} style = "visibility: visible;" {%else%} style = "visibility:hidden;" {%endif%}>
+                Remove item
+            </button>
+        </div>
+        <div class="input-group">
+             {% for color_instance in product.colors.all %}
+                <div id="button-{{color_instance}}-{{product.id}}" style="background-color:{{color_instance.hexcolor}}; border-radius: 50%" u:click="select_size_or_color('{{color_instance.name_EN}}', 'color')">{{color_instance.name_EN}}</div>
+            {% endfor %}
+        </div>
+        <div class="input-group">
+            {% for size_instance in product.sizes.all %}
+                <div id="button-{{size_instance}}-{{product.id}}" style="width:40px; height:40px; background-color:lightblue; border-radius: 50%;" u:click="select_size_or_color('{{size_instance.size}}', 'size')">{{size_instance.size}}</div>
+            {% endfor %}
+            <br>
+        </div>
+    </div>
     <hr>
 </div>
 
