--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -21,13 +21,10 @@
     <div class="row">
         <div class="col-7 col-md-6 my-auto">
             <h1 class="display-4 logo-font text-black">
-                Bag
+                Checkout
             </h1>
         </div>
     </div>
-    {% for item in bag_items %}
-            {% unicorn 'item_in_bag' item=item item_index=forloop.counter0 product=item.product %}
-    {% endfor %}
-    <button type="button"><a class="nav-link" href="{% url 'checkout' %}">Checkout</a>
+
 </div>
 {% endblock %}
