adjusted products model and views to store product images to cloudinary instead of an external url

--- a/bag/templates/unicorn/item_in_bag.html
+++ b/bag/templates/unicorn/item_in_bag.html
@@ -1,7 +1,7 @@
 <div class="row g-0">
     {% if not deleted %}
     <div class="col-5">
-        <img src="{{ item.product.image_url}}" alt="product image" style="width:75%">
+        <img src="{{ product_image_url }}" alt="product image" style="width:75%">
         <p>{{ product.name }}</p>
         <p>{{ product.description }}</p>
     </div>
