--- a/products/templates/unicorn/product.html
+++ b/products/templates/unicorn/product.html
@@ -1,5 +1,5 @@
 <div class="col-3 col-md-6">
-    <img class="rotating-immages" src="{{ product_image_url }}" alt="immage of the product" style="height: 250px" />
+    <img src="{{ product_image_url }}" alt="immage of the product" style="height: 250px" />
     <p>{{ product.name }}</p>
     <p>{{ product.description }}</p>
     <p>EUR {{ product.price }}</p>
