--- a/products/templates/products/admin_crud_products.html
+++ b/products/templates/products/admin_crud_products.html
@@ -12,27 +12,37 @@
 {% endblock %}
 
 {% block content %}
+{% if messages %}
+    {% for message in messages %}
+        <p> {{message}} </p>
+    {% endfor %}
+{% endif %}
 <div class="container">
-    <div class="row">
-            <div class="col-12 col-md-6">
-                <form method="POST" action="{% url 'admin_crud_products' %}" class="form mb-2" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% for field in form %}
-                        {% if field.name != 'product_image' %}
-                            {{ field | as_crispy_field }}
-                        {% else %}
-                            {{ field }}
-                        {% endif %}
-                    {% endfor %}
-                    <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Add Product</button>
-                    </div>
-                </form>
-            </div>
+    <div class="row g-0">
+        <div class="col-6">
+            <form method="POST" action="{% url 'admin_crud_products' %}" class="form mb-2" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for field in form %}
+                    {% if field.name != 'product_image' %}
+                        {{ field | as_crispy_field }}
+                    {% else %}
+                        {{ field }}
+                    {% endif %}
+                {% endfor %}
+                <div class="text-right">
+                    <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
+                    <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+                </div>
+            </form>
+        </div>
+        <div class="col-6">
+            Available products
         </div>
     </div>
-
+    <hr>
+        {% unicorn 'admin_add_size_form' %}
+    <hr>
+        {% unicorn 'admin_add_color_form' %}
 </div>
  <script type="text/javascript">
         $('#new-image').change(function() {
