deleted sizes CRUD functionality and replaced it with category form, add-soft_delete-delete works on both available colors and categories

--- a/products/templates/products/admin_crud_products.html
+++ b/products/templates/products/admin_crud_products.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <hr>
-        {% unicorn 'admin_add_size_form' %}
+        {% unicorn 'admin_add_category_form' %}
     <hr>
         {% unicorn 'admin_add_color_form' %}
 </div>
