added sizes exstra field to add_product form made from a django-unicorn component, added another custom widget for the color CheckboxSelectMultiple(many to many) field

--- a/products/templates/unicorn/size_by_sizecategory_choice_field.html
+++ b/products/templates/unicorn/size_by_sizecategory_choice_field.html
@@ -1,8 +1,55 @@
 <div>
     Sizes
-    <div> Universal </div>
-    <div> Standard </div>
-    <div> Infants </div>
-    <div> Shoe </div>
-    <div></div>
+     <div>
+        <button u:click.prevent="select_category_size('universal')" class="btn" autofocus> Universal </button>
+        {% if selected_size_category == 'universal' %}
+            <button class="btn btn-info" style="display: inline-block;" disabled> Products without size </button>
+        {% else %}
+            </hr>
+        {% endif %}
+
+    </div>
+    <div>
+        <button u:click.prevent="select_category_size('standard')" class="btn"> Standard </button>
+        {% if selected_size_category == 'standard' %}
+            {% for size in standard_sizes %}
+                {% if size in selected_standard_sizes %}
+                <button u:click.prevent="toggle_selected_standard_size('{{size}}')" style="background-color: lightblue">{{ size }}</button>
+                {% else %}
+                <button  u:click.prevent="toggle_selected_standard_size('{{size}}')" style="background-color: lightgray">{{ size }}</button>
+                {% endif %}
+            {% endfor %}
+        {% else %}
+            </hr>
+        {% endif %}
+    </div>
+    <div>
+        <button u:click.prevent="select_category_size('infant')" class="btn">Infant</button>
+        {% if selected_size_category == 'infant' %}
+            {% for size in infant_sizes %}
+                {% if size in selected_infant_sizes %}
+                    <button u:click.prevent="toggle_selected_infant_size('{{size}}')" style="background-color: lightblue">{{ size }}</button>
+                {% else %}
+                    <button u:click.prevent="toggle_selected_infant_size('{{size}}')" style="background-color: lightgray">{{ size }}</button>
+                {% endif %}
+            {% endfor %}
+        {% else %}
+            </hr>
+        {% endif %}
+    </div>
+    <div>
+        <button u:click.prevent="select_category_size('shoe')" class="btn"> shoe </button>
+        {% if selected_size_category == 'shoe' %}
+            {% for size in shoe_sizes %}
+                {% if size in selected_shoe_sizes %}
+                <button u:click.prevent="toggle_selected_shoe_size('{{size}}')" style="background-color: lightblue">{{ size }}</button>
+                {% else %}
+                <button u:click.prevent="toggle_selected_shoe_size('{{size}}')" style="background-color: lightgray">{{ size }}</button>
+                {% endif %}
+            {% endfor %}
+        {% else %}
+            </hr>
+        {% endif %}
+    </div>
+    <input type="hidden" value="{{final_sizes}}" name="extra_field_sizes">
 </div>
