--- a/products/templates/products/admin_crud_products.html
+++ b/products/templates/products/admin_crud_products.html
@@ -23,14 +23,15 @@
             <form method="POST" action="{% url 'admin_crud_products' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
-                    {% if field.name == 'sizes' %}
-                        {% unicorn 'size_by_sizecategory_choice_field' %}
-                    {% elif field.name != 'product_image' %}
-                        {{ field | as_crispy_field }}
-                    {% else %}
+                    {% if field.name == 'product_image' %}
                         {{ field }}
+                    {% elif field.name == 'colors' %}
+                        {{ field }}
+                    {% else %}
+                        {{ field | as_crispy_field }}
                     {% endif %}
                 {% endfor %}
+                {% unicorn 'size_by_sizecategory_choice_field' %}
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                     <button class="btn btn-black rounded-0" type="submit">Add Product</button>
@@ -47,9 +48,9 @@
         {% unicorn 'admin_add_color_form' %}
 </div>
  <script type="text/javascript">
-        $('#new-image').change(function() {
-            var file = $('#new-image')[0].files[0];
-            $('#filename').text(`Image will be set to: ${file.name}`);
-        });
-    </script>
+    $('#new-image').change(function() {
+        var file = $('#new-image')[0].files[0];
+        $('#filename').text(`Image will be set to: ${file.name}`);
+    });
+</script>
 {% endblock %}
